--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-redis": "^6.0.0",
     "md5": "^2.3.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.2",
